<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            style="@style/edit_text_style"
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:inputType="textCapWords|textMultiLine" />

        <TextView
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings_title"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whippedCreamCheckBox"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/toppings_whipped_cream" />

        <CheckBox
            android:id="@+id/chocolateCheckBox"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/toppings_chocolate" />

        <TextView
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_title"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                style="@style/plus_minus_quantity"
                android:layout_width="@dimen/plus_minus_size"
                android:layout_height="@dimen/plus_minus_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/button_vertical_margin"
                android:onClick="decrement"
                android:text="@string/minus_button_name" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/plus_minus_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <Button
                android:id="@+id/plus_button"
                style="@style/plus_minus_quantity"
                android:layout_width="@dimen/plus_minus_size"
                android:layout_height="@dimen/plus_minus_size"
                android:layout_marginLeft="@dimen/button_vertical_margin"
                android:onClick="increment"
                android:text="@string/plus_button_name" />
        </LinearLayout>

        <Button
            android:id="@+id/button_order"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/button_name" />
    </LinearLayout>
</ScrollView>

